# diabimmune

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: README.md
data/processed/: Month_10_labels_enriched.csv  Month_11_labels_enriched.csv  Month_12_labels_enriched.csv  Month_13_labels_enriched.csv  Month_14_labels_enriched.csv  Month_15_labels_enriched.csv  Month_16_labels_enriched.csv  Month_17_labels_enriched.csv  Month_18_labels_enriched.csv  Month_19_labels_enriched.csv  Month_1_labels_enriched.csv  Month_20_labels_enriched.csv  Month_21_labels_enriched.csv  Month_22_labels_enriched.csv  Month_23_labels_enriched.csv  Month_24_labels_enriched.csv  Month_25_labels_enriched.csv  Month_26_labels_enriched.csv  Month_27_labels_enriched.csv  Month_28_labels_enriched.csv  Month_29_labels_enriched.csv  Month_2_labels_enriched.csv  Month_30_labels_enriched.csv  Month_31_labels_enriched.csv  Month_32_labels_enriched.csv  Month_33_labels_enriched.csv  Month_34_labels_enriched.csv  Month_35_labels_enriched.csv  Month_36_labels_enriched.csv  Month_37_labels_enriched.csv  Month_38_labels_enriched.csv  Month_3_labels_enriched.csv  Month_4_labels_enriched.csv  Month_5_labels_enriched.csv  Month_6_labels_enriched.csv  Month_7_labels_enriched.csv  Month_8_labels_enriched.csv  Month_9_labels_enriched.csv  dataset_manifest.json  (+1 more)
docs/: MASTER.MD
notebooks/: 01_food_allergy_baseline.ipynb  README.md
scripts/: prepare_16s_dataset.py  prepare_data.py  prepare_hf_legacy.py
tests/: test_16s_artifacts.py  test_rdata_food_allergy_is_subject_level.py
(+68 files in other folders)
