[project]
name = "diabimmune"
version = "0.1.0"
description = "Allergy/atopy classifier using DIABIMMUNE microbiome embeddings"
requires-python = ">=3.12"
dependencies = [
  "h5py>=3.10",
  "huggingface-hub>=0.20",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyreadr>=0.5",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
]

[dependency-groups]
dev = [
  "mypy>=1.8",
  "nbmake>=1.5",
  "nbqa>=1.7",
  "nbstripout>=0.6",
  "pandas-stubs>=2.2",
  "pre-commit>=3.7",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PTH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["h5py.*", "huggingface_hub.*", "pyreadr.*"]
ignore_missing_imports = true

